# DP-model-in-fixed-target-experiments

./: LICENSE  README.md
Analysis/: chi^2_test.ipynb
Geant4Files/: CMakeLists.txt
Geant4Files/src/: actionInitialization.cc  actionInitialization.hh  construction.cc  construction.hh  event.cc  event.hh  primaryGenerator.cc  primaryGenerator.hh  project.cc  run.cc  steppingAction.cc  steppingAction.hh
MadGraph/run_cards/: pion_decay_inelasticHiggs_downscattering_angle
